[package]
name = "wolf_engine"
description = "A simple, flexible game framework."
version = "0.26.0"
authors = ["AlexiWolf <alexi@wolvesin.space>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/AlexiWolf/wolf_engine"
homepage = "https://github.com/AlexiWolf/wolf_engine"
keywords = ["wolf-engine", "gamedev"]
categories = ["game-development", "game-engines"]

[workspace]
members = ["crates/*"]

[dependencies]
wolf_engine_events = { version = "0.1.0", path = "crates/wolf_engine_events" }
wolf_engine_input = { version = "0.1.1", path = "crates/wolf_engine_input", optional = true }
wolf_engine_window = { version = "0.1.0", path = "crates/wolf_engine_window", optional = true }

[features]
default = ["input"]
input = ["wolf_engine_input"]
winit = ["wolf_engine_input/winit"]
window = ["wolf_engine_window"]

[dev-dependencies]
winit = "0.29.14"

[[example]]
name = "input"
required-features = ["winit"]

