[package]
name = "wolf_engine_events"
description = "An event modules for Wolf Engine."
version = "0.2.0"
authors = ["AlexiWolf <alexi@wolvesin.space>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/AlexiWolf/wolf_engine"
homepage = "https://github.com/AlexiWolf/wolf_engine"
keywords = ["wolf-engine", "gamedev", "events", "dynamic"]
categories = ["game-development", "game-engines"]

[dev-dependencies]
ntest = "0.9.0"
test-case = "3.3.1"

[dependencies]
downcast-rs = "1.2.1"
