[package]
name = "wolf_engine_framework"
description = "A high-level game framework."
version = "0.1.0"
edition = "2021"
authors = ["AlexiWolf <alexi@wolvesin.space>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/AlexiWolf/wolf_engine"
homepage = "https://github.com/AlexiWolf/wolf_engine"
keywords = ["wolf-engine", "gamedev", "windowing"]
categories = ["game-development", "game-engines"]

[dependencies]
wolf_engine_events = { version = "0.1.0", path = "../wolf_engine_events" }
wolf_engine_input = { version = "0.1.2", path = "../wolf_engine_input" }
wolf_engine_window = { version = "0.1.0", path = "../wolf_engine_window" }

[dev-dependencies]
mockall = "0.13.0"
ntest = "0.9.3"
