
[package]
name = "wolf_engine_graphics"
description = "A graphics API based on WGPU."
version = "0.1.0"
authors = ["AlexiWolf <alexi@wolvesin.space>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/AlexiWolf/wolf_engine"
homepage = "https://github.com/AlexiWolf/wolf_engine"
keywords = ["wolf-engine", "gamedev", "graphics"]
categories = ["game-development", "game-engines"]

[dependencies]
wgpu = "0.19.3"

[dev-dependencies]
pollster = { version = "0.3.0", features = ["macro"] }
