[package]
name = "wolf_engine_input"
version = "0.1.0"
authors = ["AlexiWolf <alexi@wolvesin.space>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/AlexiWolf/wolf_engine"
homepage = "https://github.com/AlexiWolf/wolf_engine"
keywords = ["wolf-engine", "gamedev", "input"]
categories = ["game-development", "game-engines"]

[dependencies]
wolf_engine_events = { version = "0.1.0", path = "../wolf_engine_events" }
winit = { version = "0.29.14", optional = true }

[dev-dependencies]
test-case = "3.3.1"
