[package]
name = "wolf_engine_input"
description = "A high-level input API."
version = "0.1.2"
authors = ["AlexiWolf <alexi@wolvesin.space>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/AlexiWolf/wolf_engine"
homepage = "https://github.com/AlexiWolf/wolf_engine"
keywords = ["wolf-engine", "gamedev", "input"]
categories = ["game-development", "game-engines"]

[dependencies]
winit = { version = "0.30", optional = true }

[dev-dependencies]
test-case = "3.3.1"
