[package]
name = "wolf_engine_window"
description = "A simple, high-level window API for video games."
version = "0.2.0"
edition = "2021"
authors = ["AlexiWolf <alexi@wolvesin.space>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/AlexiWolf/wolf_engine"
homepage = "https://github.com/AlexiWolf/wolf_engine"
keywords = ["wolf-engine", "gamedev", "windowing"]
categories = ["game-development", "gui"]

[features]
default = ["rwh_06"]
rwh_06 = ["dep:rwh_06", "winit/rwh_06"]
rwh_05 = ["dep:rwh_05", "winit/rwh_05"]

[dependencies]
winit = "0.30"
cfg-if = "1.0.0"
wolf_engine_input = { version = "0.1.2", path = "../wolf_engine_input", features = ["winit"] }

rwh_06 = { package = "raw-window-handle", version = "0.6", optional = true }
rwh_05 = { package = "raw-window-handle", version = "0.5", optional = true }

[dev-dependencies]
ntest = "0.9.3"
