[package]
name = "wolf_engine_window"
description = "A simple, high-level window API for video games."
version = "0.3.0"
edition = "2021"
authors = ["AlexiWolf <alexi@wolvesin.space>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/AlexiWolf/wolf_engine"
homepage = "https://github.com/AlexiWolf/wolf_engine"
keywords = ["wolf-engine", "gamedev", "windowing"]
categories = ["game-development", "gui"]

[features]
default = ["rwh_06"]

[dependencies]
rwh_06 = { package = "raw-window-handle", version = "0.6", optional = true }
rwh_05 = { package = "raw-window-handle", version = "0.5", optional = true }
wolf_engine_input = { version = "0.1.2", path = "../wolf_engine_input", features = ["winit"] }
uuid = { version = "1.10.0", features = ["v4", "fast-rng"] }
thiserror = "1.0.63"
anyhow = "1.0.86"
wolf_engine_events = { version = "0.1.0", path = "../wolf_engine_events" }


