[package]
name = "wolf_engine_window"
description = "A simple, high-level window API for video games."
version = "0.3.0"
edition = "2021"
authors = ["AlexiWolf <alexi@wolvesin.space>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/AlexiWolf/wolf_engine"
homepage = "https://github.com/AlexiWolf/wolf_engine"
keywords = ["wolf-engine", "gamedev", "windowing"]
categories = ["game-development", "gui"]

[dependencies]
wolf_engine_input = { version = "0.1.2", path = "../wolf_engine_input", features = ["winit"] }
wolf_engine_events = { version = "0.2.1", path = "../wolf_engine_events" }
rwh_06 = { package = "raw-window-handle", version = "0.6", optional = true }
rwh_05 = { package = "raw-window-handle", version = "0.5", optional = true }
uuid = { version = "1.10", features = ["v4", "fast-rng"] }
thiserror = "1.0"
